# appmod-blueprints

./: .devcontainer.json  .gitignore  README.md
.devcontainer/: .devcontainer.json
applications/.net/src/: Dockerfile
applications/dotnet/SampleFileswithQ/: GetOrderDetailsQuery.cs  GetOrderDetailsQueryHandler.cs  OrderDetailsController.cs  OrderDetailsVm.cs
applications/dotnet/deployment/dev/: application.yml
applications/dotnet/src/: Northwind.sln  build.sh
applications/dotnet/src/Infrastructure/: DependencyInjection.cs  DesignTimeDbContextFactoryBase.cs
applications/dotnet/src/Persistence/: DependencyInjection.cs  DesignTimeDbContextFactoryBase.cs
applications/dotnet/src/WebUI/: Startup.cs  WebUI.csproj  appsettings.json  (+1 more)
applications/gitea/terraform-eks/: .gitignore  outputs.tf
applications/golang/: go.mod  go.sum
applications/java/src/: Dockerfile
applications/next-js/: .gitignore  Dockerfile  README.md  amplify.yml  next.config.js  package.json  pnpm-lock.yaml
applications/next-js/app/: layout.tsx  page.tsx
applications/next-js/components/: carousel.tsx
applications/next-js/deployment/: nextjs-deployment.yaml  nextjs-svc.yaml
applications/next-js/lib/: constants.ts
applications/node/: Dockerfile  app.js
applications/node/deployment/: node.yaml
applications/python/app/: app.py
applications/rust/: Cargo.toml  Dockerfile  Dockerfile.arm  README.md  build.sh  buildspec.yaml
applications/rust/.gitea/workflows/: build.yaml
applications/rust/deployment/: rust-app-namespace.yaml  rust-app-sa.yaml  rust-app-service.yaml  rust-microservice-deployment.yaml
applications/rust/deployment/dev/: application.yml
applications/rust/deployment/grafana/: rust-app-dashboard.json
applications/rust/deployment/infra/: rust-app-cdn-images.yaml  rust-app-iam-role.yaml  rust-app-pod-identity-setup.yaml  rust-app-s3-images.yaml
applications/rust/deployment/local/: otel-config.yaml  prometheus.yaml
applications/rust/deployment/oam/: rust-app-oam.yaml
applications/rust/deployment/service/: adotcollectorconfig.yaml  rust-app-sa.yaml  rust-app-service.yaml  rust-app-setup-job.yaml  rust-microservice-deployment.yaml
applications/rust/integration/: Dockerfile  README.md  benchmark.yaml  integration-job.yaml
applications/rust/integration/demo-build/: Dockerfile  benchmark.yaml  manual-load-test-app.yaml  start-script.sh
applications/rust/platform-meta/examples/: ddb-example.yaml  dynamodb-example1.yaml  service-example-1.yaml
applications/rust/platform-meta/templates/components/: dynamodb-table.yml
applications/rust/src/: main.rs  types.rs
applications/rust/src/api/: main.rs  setup.rs  types.rs  utils.rs
applications/rust/src/api/res/: products.csv
applications/rust/src/api/services/: cart.rs  mod.rs  product.rs  ui.rs  wishlist.rs
applications/rust/src/integration/: Dockerfile  benchmark.yaml  main.rs  test_cart.rs
applications/rust/src/lambda/: main.rs  types.rs  utils.rs
applications/rust/src/lambda/services/: cart.rs  mod.rs  product.rs  ui.rs
applications/rust/src/services/: cart.rs  mod.rs  product.rs  ui.rs
applications/rust/src/setup/: main.rs
applications/rust/src/setup/res/: products.csv  variants.csv
deployment/addons/kubevela/: Chart.yaml  values.yaml
deployment/addons/templates/: argo-rollouts.yaml  kubevela.yaml
deployment/examples/: cdn.example.yaml  s3.example.yaml
docs/: Argo-Rollouts-Metrics-Driven-Deployment.md  Argo-Rollouts-Metrics-Driven-Progressive-Delivery.md  Argo-Rollouts-Metrics-Manifest.md  design.md
docs/platform/: README.md
platform/backstage/: README.md
platform/backstage/templates/: catalog-info.yaml
platform/components/: appmod-service.cue  cdn.cue  ddb-table.cue  dynamodb.cue  external-database-secret.cue  rds-cluster.cue  s3-bucket.cue  service-account.cue
platform/crossplane/: README.md  crossplane-compositions.yaml
platform/crossplane/examples/: aurora-postgres.yaml  postgres.yaml  s3-bucket-component.yaml
platform/infra/terraform/: .gitignore  README.md  create-cluster.sh  create-database.sh  create-tf.sh  destroy-environments.sh  destroy-tf.sh  destroy-workshop.sh  gitea-token.txt  giteaInit.sh  local-testing-assume-role.sh  run-tf.sh  setup-environments-local.sh  setup-environments.sh  setup-keycloak.sh  setup-workshop-local.sh  setup-workshop.sh
platform/traits/: component-policy.cue  path-based-ingress.cue  service-account.cue
(+417 files in other folders)
