[package]
name = "rust-microservice"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[[bin]]
name = "lambda"
path = "src/lambda/main.rs"

[[bin]]
name = "setup"
path = "src/setup/main.rs"

[[bin]]
name = "integration"
path = "src/integration/main.rs"


[dependencies]
csv = "1.3.0"
rand = "0.8.5"
futures = "0.3.30"
aws-sdk-s3 = "1.47.0"
lambda_runtime = "0.13.0"
aws-sdk-dynamodb = "1.43.0"
serde_json = { version = "1.0.127" }
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_prometheus = "0.10.1"
serde = { version= "1.0.209", features = ["derive"] }
lambda-web = { version = "0.2.1", features=["rocket05"] }
aws-config = { version = "1.5.5", features = ["behavior-version-latest"] }
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
uuid = { version = "1.10.0", features = ["v4"] }
image = "0.25.2"
opentelemetry = { version = "0.24.0", features = ["logs", "metrics", "trace"]}
opentelemetry_sdk = "0.24.0"
opentelemetry-prometheus = "0.17.0"